# ActeOs

./: .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  _gen_intent_proposals.py  docker-compose.yml
.github/workflows/: ci.yml
acteos_lifeos_romania_v2/: AGENTS.md  CODEX_START_HERE.md  Makefile  PACK_MANIFEST.json  README.md  SHA256SUMS.txt  VALIDATION_REPORT.md  package.json
acteos_lifeos_romania_v2/adr/: ADR-001-event-first-domain.md  ADR-004-evidence-gated-content.md  ADR-005-local-first-documents.md  ADR-007-api-first-openapi.md  ADR-008-postgres-content-audit.md  ADR-009-ruleset-immutable-publish.md  ADR-010-no-silent-conflict.md
acteos_lifeos_romania_v2/codex/: CODEX_MASTER_PROMPT.md  EXECUTION_PLAN.md  PHASE_PROMPTS.md  PR_CHECKLIST.md  TASK_BACKLOG.yaml  TRACEABILITY_MATRIX.csv
acteos_lifeos_romania_v2/contracts/: design_tokens.json  (+6 more)
acteos_lifeos_romania_v2/services/api/: README.md  pyproject.toml
acteos_lifeos_romania_v2_1/: .env.example  AGENTS.md  CODEX_START_HERE.md  Makefile  PACK_MANIFEST.json  PLANS.md  README.md  SHA256SUMS.txt  UPGRADE_V2_TO_V2_1.md  VALIDATION_REPORT.md  turbo.json
acteos_lifeos_romania_v2_1/python/acteos_intent_resolver/: pyproject.toml
acteos_lifeos_romania_v2_1/python/acteos_intent_resolver/src/acteos_intent_resolver/: __init__.py  catalog.py  loader.py  normalize.py  ranking.py  resolver.py
acteos_lifeos_romania_v2_1/python/acteos_intent_resolver/tests/: test_normalize.py  test_resolver.py
acteos_lifeos_romania_v2_1/python/acteos_rule_engine/: pyproject.toml
acteos_lifeos_romania_v2_1/python/acteos_rule_engine/src/acteos_rule_engine/: __init__.py  trivalent.py
acteos_lifeos_romania_v2_1/python/acteos_rule_engine/src/acteos_rule_engine/authoring/: __init__.py  ast.py  certification.py  cli.py  effects.py  event_types.py  loader.py  orchestrator.py  publish.py  resolution.py  ruleset.py  templates.py  validate.py
acteos_lifeos_romania_v2_1/python/acteos_rule_engine/tests/: test_authoring_ast.py  test_authoring_dates.py  test_authoring_golden.py  test_authoring_orchestrator.py  test_authoring_resolution.py  test_authoring_validate.py  test_certification.py  test_event_types.py  test_provenance.py  test_provenance_integrity.py  test_publish.py  test_templates.py
acteos_lifeos_romania_v2_1/services/api/: pyproject.toml
acteos_lifeos_romania_v2_1/services/api/db_tests/: test_case_store_postgres.py  test_journey_step_dependencies_postgres.py
acteos_lifeos_romania_v2_1/services/api/src/acteos_api/: __init__.py  app_tables.py  case_store.py  cases.py  content_publish.py  content_tables.py  db.py  discovery.py  main.py  publish_db.py  repository.py  rulesets.py  schemas.py
acteos_lifeos_romania_v2_1/services/api/tests/: conftest.py  test_case_store.py  test_cases_api.py  test_content_publish.py  test_contract_cases_api.py  test_db.py  test_discovery_api.py  test_provenance_publish.py  test_publish_db.py
lifeos_romania_codex_pack_v1/: 00_PRODUCT_MANIFEST.md  01_PRD.md  03_UX_FLOWS.md  04_DOMAIN_MODEL.md  05_EVENT_RESOLVER_SPEC.md  06_RULE_ENGINE_SPEC.md  07_SOURCE_GOVERNANCE.md  08_ARCHITECTURE.md  09_API_SPEC.yaml  10_DATABASE_SCHEMA.sql  11_SECURITY_PRIVACY.md  12_TEST_STRATEGY.md  13_BACKLOG.yaml  14_DEFINITION_OF_DONE.md  15_CODEX_MASTER_PROMPT.md  16_PHASE_PROMPTS.md  17_DEPLOYMENT_RUNBOOK.md  18_CONTENT_OPERATIONS.md  19_METRICS_AND_BUSINESS.md  20_PARTNER_NEUTRALITY_POLICY.md  21_TRACEABILITY_MATRIX.csv  CODEX_START_HERE.md  PACKAGE_MANIFEST.json  README.md  VALIDATION_REPORT.md
services/api/: README.md  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial.py
services/api/src/wb_api/: __init__.py  app.py  audit.py  bundles.py  canonical.py  config.py  crypto.py  db.py  deps.py  errors.py  idempotency.py  logging.py  main.py  mapping.py  models.py  repositories.py  schemas.py  services.py
services/api/src/wb_api/routers/: __init__.py  catalog.py  evidence.py  feedback.py  journeys.py  routes.py  system.py
services/api/tests/: test_audit.py  test_crypto.py  test_idempotency.py
waze_birocratie_codex_pack/: 00_PRODUCT_MANIFEST.md  01_SCOPE_RELEASES.md  03_UX_FLOWS.md  04_DOMAIN_MODEL.md  05_RULE_ENGINE_SPEC.md  08_API_SPEC.yaml  11_DESIGN_SYSTEM.md  12_TEST_STRATEGY.md  13_BACKLOG.yaml  14_DEFINITION_OF_DONE.md  15_CODEX_MASTER_PROMPT.md  18_CONTENT_OPERATIONS.md  19_SOURCE_REGISTRY.json  20_CANONICAL_DECISIONS.md  21_TRACEABILITY_MATRIX.csv  22_SEED_GUIDE.md  23_WORKBOOK_CHECKLIST.md  CODEX_START_HERE.md  README.md  VALIDATION_REPORT.md
(+2489 files in other folders)
