[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wb-api"
version = "0.1.0"
description = "Waze-birocratie API persistence layer: encrypted journeys, hash-chained audit, idempotency."
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "cryptography>=43",
    "fastapi>=0.138",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[tool.hatch.build.targets.wheel]
packages = ["src/wb_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
