[project]
name = "acteos-api"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.138,<0.139",
  "uvicorn[standard]>=0.34,<0.35",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "sqlalchemy>=2.0.41,<3",
  "psycopg[binary]>=3.2.9,<4",
  "alembic>=1.16,<2",
  "httpx>=0.28,<0.29",
  "structlog>=25.4,<26",
  "opentelemetry-api>=1.34,<2",
  "opentelemetry-sdk>=1.34,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "hypothesis>=6.135,<7",
  "ruff>=0.12,<0.13",
  "mypy>=1.16,<2",
  "types-PyYAML>=6.0.12"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
