[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acteos-intent-resolver"
version = "2.1.0"
description = "Deterministic Romanian intent resolver for ActeOS discovery. Pure: no network, DB, clock or LLM in the core pipeline."
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
# The pure pipeline (normalize/ranking/catalog/resolver) needs no deps.
# PyYAML is only needed by the file loaders for taxonomy/ranking config.
yaml = ["pyyaml>=6"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "pyyaml>=6"]

[tool.setuptools.packages.find]
where = ["src"]
